Updated inventory for testing
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis-cluster/tasks/follower.yml
+++ b/roles/redis-cluster/tasks/follower.yml
@@ -68,7 +68,7 @@
     - Ensure system daemon reloaded
     - Ensure redis exporter service is running
   when: >
-    inventory_hostname in groups['follower]' and
+    inventory_hostname in groups['follower'] and
     redis_monitoring_enabled
 
 - name: Ensuring that handlers are executed for follower
