--- a/roles/redis-cluster/tasks/leader.yml
+++ b/roles/redis-cluster/tasks/leader.yml
@@ -60,7 +60,7 @@
   become: yes
   notify:
     - Ensure system daemon reloaded
-    - Ensure redis exporter service is running
+    - Ensure redis leader exporter service is running
   when: >
     inventory_hostname in groups['leader'] and
     redis_monitoring_enabled
