--- a/roles/redis-cluster/tasks/follower.yml
+++ b/roles/redis-cluster/tasks/follower.yml
@@ -66,7 +66,7 @@
   become: yes
   notify:
     - Ensure system daemon reloaded
-    - Ensure redis exporter service is running
+    - Ensure redis follower exporter service is running
   when: >
     inventory_hostname in groups['follower'] and
     redis_monitoring_enabled
