--- a/inventory/replicated.ini
+++ b/inventory/replicated.ini
@@ -1,20 +1,20 @@
 [redis]
-redis1 ansible_ssh_host=172.31.48.12
-redis2 ansible_ssh_host=172.31.60.129
-redis3 ansible_ssh_host=172.31.54.111
+redis1 ansible_ssh_host=172.31.54.213
+redis2 ansible_ssh_host=172.31.62.71
+redis3 ansible_ssh_host=172.31.48.40
 
 [sentinel]
-sentinel1 ansible_ssh_host=172.31.48.12 sentinel_port=26379 quorum_count=2
-sentinel2 ansible_ssh_host=172.31.60.129 sentinel_port=26379 quorum_count=2
-sentinel3 ansible_ssh_host=172.31.54.111 sentinel_port=26379 quorum_count=2
+sentinel1 ansible_ssh_host=172.31.54.213 sentinel_port=26379 quorum_count=2
+sentinel2 ansible_ssh_host=172.31.62.71 sentinel_port=26379 quorum_count=2
+sentinel3 ansible_ssh_host=172.31.48.40 sentinel_port=26379 quorum_count=2
 
 [redis_cluster:children]
 leader
 follower
 
 [leader]
-redis-leader1 ansible_ssh_host=172.31.48.12 redis_port=6379
+redis-leader1 ansible_ssh_host=172.31.54.213 redis_port=6379 exporter_port=9121
 
 [follower]
-redis-follower1 ansible_ssh_host=172.31.60.129 redis_port=6379
-redis-follower2 ansible_ssh_host=172.31.54.111 redis_port=6379
+redis-follower1 ansible_ssh_host=172.31.62.71 redis_port=6379 exporter_port=9121
+redis-follower2 ansible_ssh_host=172.31.48.40 redis_port=6379 exporter_port=9121
