[Monitoring][Add] Added monitoring support for redis and redis cluster (#7)
* Added monitoring support for redis

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Added monitoring support for redis

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Added monitoring support for redis

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Added monitoring support for redis

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Added monitoring support for redis

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Added monitoring support for redis

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Added monitoring support for redis

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Added monitoring support for redis cluster

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Updated inventory for testing

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Updated inventory for testing

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Updated inventory for testing

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Updated inventory for testing

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Updated inventory for testing

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

* Updated inventory for testing

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis-cluster/tasks/follower.yml
+++ b/roles/redis-cluster/tasks/follower.yml
@@ -40,7 +40,7 @@
 
 - name: Ensuring the slaveof variables is set for Followers
   set_fact:
-    redis_slaveof:  "{{ hostvars[groups['leader'][0]]['ansible_default_ipv4']['address'] }} {{ hostvars[groups['leader'][0]]['redis_port'] }}"
+    redis_slaveof: "{{ hostvars[groups['leader'][0]]['ansible_default_ipv4']['address'] }} {{ hostvars[groups['leader'][0]]['redis_port'] }}"
   when: >
     groups['follower']
 
@@ -56,6 +56,20 @@
   when: >
     setup_mode == "replicated" and
     groups['leader'] | length == 1
+
+- name: Ensure that redis follower exporter service exists
+  template:
+    src: redis-exporter.service.j2
+    dest: "/etc/systemd/system/redis-follower-exporter.service"
+    owner: root
+    group: root
+  become: yes
+  notify:
+    - Ensure system daemon reloaded
+    - Ensure redis follower exporter service is running
+  when: >
+    inventory_hostname in groups['follower'] and
+    redis_monitoring_enabled
 
 - name: Ensuring that handlers are executed for follower
   meta: flush_handlers
