--- a/inventory/standalone.ini
+++ b/inventory/standalone.ini
@@ -1,2 +1,5 @@
 [redis]
-redis-server ansible_ssh_host=172.31.0.16
+redis-server ansible_ssh_host=74.220.20.48
+
+[exporter]
+exporter ansible_ssh_host=74.220.20.48
