--- a/roles/exporter/tasks/install.yaml
+++ b/roles/exporter/tasks/install.yaml
@@ -6,7 +6,7 @@
 
 - name: Ensure that the defined exporter version is downloaded  # {{ redis_version }}
   unarchive:
-    src: https://github.com/oliver006/redis_exporter/releases/download/v1.45.0/redis_exporter-v1.45.0.linux-amd64.tar.gz
+    src: https://github.com/oliver006/redis_exporter/releases/download/{{exporter_version}}/redis_exporter-{{exporter_version}}.linux-amd64.tar.gz
     dest: /tmp/
     remote_src: yes
   when: >
@@ -14,7 +14,7 @@
 
 - name: Copy file with owner and permissions
   copy:
-    src: /tmp/redis_exporter-v1.45.0.linux-amd64/redis_exporter
+    src: /tmp/redis_exporter-{{exporter_version}}.linux-amd64/redis_exporter
     dest: /usr/local/bin/
     remote_src: yes
     owner: root
