--- a/roles/exporter/vars/main.yaml
+++ b/roles/exporter/vars/main.yaml
@@ -1,4 +1,4 @@
----
-redis_password: "Opstree@1234"
-exporter_port : 9121  
-redis_port : 6379
+# ---
+# redis_password: "Opstree@1234"
+# exporter_port : 9121  
+# redis_port : 6379
