--- a/inventory/replicated.ini
+++ b/inventory/replicated.ini
@@ -18,3 +18,8 @@ redis-leader1 ansible_ssh_host=172.31.48.12 redis_port=6379
 [follower]
 redis-follower1 ansible_ssh_host=172.31.60.129 redis_port=6379
 redis-follower2 ansible_ssh_host=172.31.54.111 redis_port=6379
+
+[exporter]
+exporter-leader1 ansible_ssh_host=74.220.30.102 redis_port=6379
+exporter-follower1 ansible_ssh_host=172.31.60.129 redis_port=6379
+exporter-follower2 ansible_ssh_host=172.31.54.111 redis_port=6379
