--- a/inventory/cluster.ini
+++ b/inventory/cluster.ini
@@ -19,3 +19,11 @@ redis-follower1 ansible_ssh_host=192.168.1.3 redis_port=6380 leader_id=0 node_st
 redis-follower2 ansible_ssh_host=192.168.1.2 redis_port=6380 leader_id=1 node_status=ready
 redis-follower3 ansible_ssh_host=192.168.1.4 redis_port=6380 leader_id=2 node_status=ready
 #redis-follower4 ansible_ssh_host=172.31.55.4 redis_port=6380 leader_id=3 node_status=remove
+
+[exporter]
+exporter-leader1 ansible_ssh_host=192.168.1.2 redis_port=6379 leader_id=0 
+exporter-leader2 ansible_ssh_host=192.168.1.3 redis_port=6379 leader_id=1 
+exporter-leader3 ansible_ssh_host=192.168.1.4 redis_port=6379 leader_id=2 
+exporter-follower1 ansible_ssh_host=192.168.1.3 redis_port=6380 leader_id=0 
+exporter-follower2 ansible_ssh_host=192.168.1.2 redis_port=6380 leader_id=1 
+exporter-follower3 ansible_ssh_host=192.168.1.4 redis_port=6380 leader_id=2 
