--- a/draft_inventory/replicated.ini
+++ b/draft_inventory/replicated.ini
@@ -18,3 +18,8 @@ redis-leader1 ansible_ssh_host=172.31.54.213 redis_port=6379 exporter_port=9121
 [follower]
 redis-follower1 ansible_ssh_host=172.31.62.71 redis_port=6379 exporter_port=9121
 redis-follower2 ansible_ssh_host=172.31.48.40 redis_port=6379 exporter_port=9121
+
+# [exporter]
+# exporter-leader1 ansible_ssh_host=74.220.30.102 redis_port=6379
+# exporter-follower1 ansible_ssh_host=172.31.60.129 redis_port=6379
+# exporter-follower2 ansible_ssh_host=172.31.54.111 redis_port=6379
