--- a/inventory/cluster.ini
+++ b/inventory/cluster.ini
@@ -1,21 +1,24 @@
 [redis]
-redis1 ansible_ssh_host=172.31.57.91
-redis2 ansible_ssh_host=172.31.49.187
-redis3 ansible_ssh_host=172.31.62.128
-#redis4 ansible_ssh_host=172.31.55.4
+redis1 ansible_ssh_host=192.168.1.7
+redis2 ansible_ssh_host=192.168.1.8
+redis3 ansible_ssh_host=192.168.1.9
+redis4 ansible_ssh_host=192.168.1.10
+redis5 ansible_ssh_host=192.168.1.11
 
 [redis_cluster:children]
 leader
 follower
 
 [leader]
-redis-leader1 ansible_ssh_host=172.31.57.91 redis_port=6379 exporter_port=9121 leader_id=0 node_status=ready
-redis-leader2 ansible_ssh_host=172.31.49.187 redis_port=6379 exporter_port=9121 leader_id=1 node_status=ready
-redis-leader3 ansible_ssh_host=172.31.62.128 redis_port=6379 exporter_port=9121 leader_id=2 node_status=ready
-#redis-leader4 ansible_ssh_host=172.31.55.4 redis_port=6379 exporter_port=9121 leader_id=3 node_status=remove
+redis-leader1 ansible_ssh_host=192.168.1.7 redis_port=6379 exporter_port=9121 leader_id=0 node_status=ready redis_slots=3277
+redis-leader2 ansible_ssh_host=192.168.1.8 redis_port=6379 exporter_port=9121 leader_id=1 node_status=ready redis_slots=3277
+redis-leader3 ansible_ssh_host=192.168.1.9 redis_port=6379 exporter_port=9121 leader_id=2 node_status=ready redis_slots=3277
+redis-leader4 ansible_ssh_host=192.168.1.10 redis_port=6379 exporter_port=9121 leader_id=3 node_status=ready redis_slots=3277
+redis-leader5 ansible_ssh_host=192.168.1.11 redis_port=6379 exporter_port=9121 leader_id=3 node_status=ready redis_slots=3276
 
 [follower]
-redis-follower1 ansible_ssh_host=172.31.57.91 redis_port=6380 exporter_port=9122 leader_id=0 node_status=ready
-redis-follower2 ansible_ssh_host=172.31.49.187 redis_port=6380 exporter_port=9122 leader_id=1 node_status=ready
-redis-follower3 ansible_ssh_host=172.31.62.128 redis_port=6380 exporter_port=9122 leader_id=2 node_status=ready
-#redis-follower4 ansible_ssh_host=172.31.55.4 redis_port=6380 exporter_port=9122 leader_id=3 node_status=remove
+redis-follower1 ansible_ssh_host=192.168.1.7 redis_port=6380 exporter_port=9122 leader_id=0 node_status=ready
+redis-follower2 ansible_ssh_host=192.168.1.8 redis_port=6380 exporter_port=9122 leader_id=1 node_status=ready
+redis-follower3 ansible_ssh_host=192.168.1.9 redis_port=6380 exporter_port=9122 leader_id=2 node_status=ready
+redis-follower4 ansible_ssh_host=192.168.1.10 redis_port=6380 exporter_port=9122 leader_id=3 node_status=ready
+redis-follower5 ansible_ssh_host=192.168.1.11 redis_port=6380 exporter_port=9122 leader_id=3 node_status=ready
