--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -42,22 +42,30 @@
     #      not remove_node_id.stat.exists and  node_status == "remove" 
 
     - name: Check the Node id of transfer node
-      command: |-
-        redis-cli -h  {{ansible_ssh_host}}  -p {{redis_port}} -a {{redis_password}} cluster myid
+      shell : |-
+        redis-cli -h  {{ansible_ssh_host}}  -p {{redis_port}} -a {{redis_password}} cluster nodes | grep master | grep -v {{ansible_ssh_host}}:{{redis_port}}
       register: transfer_node_id
       when: >
-        node_status == "ready"    
-    
+        node_status == "remove"    
+
+    - name: Ensure the transfer node are present in temporary file
+      local_action:
+        module: copy
+        content: "{{ transfer_node_id.stdout_lines }}"
+        dest: /tmp/node-ready
+      when: >
+        node_status == 'ready'
+
     - name:  Reshard the Node to be removed 
-      shell : |-
+      command : |-
         {{ redis_command }} --cluster reshard {{ansible_ssh_host}}:{{redis_port}} 
-        --cluster-from {{item.split(' ')[0]}} 
-        --cluster-to {{transfer_node_id}} 
+        --cluster-from {{item.remove.split(' ')[0]}} 
+        --cluster-to {{item.ready.split(' ')[0]}} 
         --cluster-slots  {{ redis_slots }}
         --cluster-yes
       when: node_status == 'remove'
       with_items: 
-        - "{{ lookup('file', '/tmp/node-removal') }}"
+        - "{{ remove : lookup('file', '/tmp/node-removal') , ready : lookup('file', '/tmp/node-ready') }}"
 
     - name: Rebalance the Redis cluster
       command: |- 
@@ -78,4 +86,10 @@
       local_action:
         module: file
         path: /tmp/node-removal
+        state: absent
+
+    - name: Ensuring the temporary file is removed after execution
+      local_action:
+        module: file
+        path: /tmp/node-ready
         state: absent
