--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -4,12 +4,8 @@
     redis_password: Opstree@1234
     leader_redis_port: 6379
     follower_redis_port: 6380
+    redis_slots: 3446
   tasks:
-    # - name: Ensuring the temporary file is created before execution
-    #   local_action:
-    #     module: file
-    #     path: /tmp/node-removal
-    #     state: touch
     
     - name: Ensure redis-cli is generated without password
       set_fact:
@@ -25,6 +21,13 @@
       command: |-
         {{ redis_command }} cluster nodes
       register: command_result
+    
+    - name: Check the Node id of the remove node 
+      shell: |- 
+        redis-cli -h  {{ansible_ssh_host}}  -p {{redis_port}} -a {{redis_password}} cluster myid
+      register: remove_node_id
+      when: > 
+        node_status == "remove" and inventory_hostname in groups['leader'] 
 
     - name: Check the Node id of transfer node
       shell : |-
@@ -40,6 +43,7 @@
     #     dest: /tmp/node-removal
     #   when: >
     #     node_status == 'remove'
+
     - name: Create the Json file with the remove and ready redis node 
       ansible.builtin.template:
         src: node.json.j2
@@ -49,7 +53,7 @@
     - name:  Reshard the Node to be removed 
       command : |-
         {{ redis_command }} --cluster reshard {{ansible_ssh_host}}:{{redis_port}} 
-        --cluster-from {{item.removenode.split(' ')[0]}} 
+        --cluster-from {{item.removenode}} 
         --cluster-to {{ item.presentnode }} 
         --cluster-slots  {{ redis_slots }}
         --cluster-yes
@@ -61,12 +65,12 @@
     - name: Ensuring the removed marked nodes are not part of the cluster
       command: |-
         {{ redis_command }} --cluster del-node
-        {{ ansible_ssh_host }}:{{ leader_redis_port }} {{ item.split(' ')[0] }}
+        {{ ansible_ssh_host }}:{{ leader_redis_port }} {{ item.removenode}}
       with_items:
-        - "{{ lookup('file', '/tmp/node-removal') }}"
+        - "{{ lookup('file', '/tmp/node.json') | from_json }}"
       when: >
         inventory_hostname in groups['leader'][0] and
-        lookup('file', '/tmp/node-removal')|length > 0
+        lookup('file', '/tmp/node.json')|length > 0
         
     - name: Rebalance the Redis cluster
       command: |- 
