--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -5,8 +5,20 @@
     leader_redis_port: 6379
     follower_redis_port: 6380
     redis_slots: 3446
+
   tasks:
-    
+    - name: Ensuring the temporary file is created before execution
+      local_action:
+        module: file
+        path: /tmp/node-removal
+        state: touch
+
+    - name: Ensuring the temporary file is created before execution
+      local_action:
+        module: file
+        path: /tmp/node-ready
+        state: touch
+
     - name: Ensure redis-cli is generated without password
       set_fact:
         redis_command: redis-cli
@@ -20,29 +32,41 @@
     - name: Ensure if redis cluster exists or not
       command: |-
         {{ redis_command }} cluster nodes
-      register: command_result
+      register: command_result       
     
-    - name: Check the Node id of the remove node 
-      shell: |- 
-        redis-cli -h  {{ansible_ssh_host}}  -p {{redis_port}} -a {{redis_password}} cluster myid
-      register: remove_node_id
-      when: > 
-        node_status == "remove" and inventory_hostname in groups['leader'] 
+    # - name: Check the Node id of the remove node 
+    #   shell: |- 
+    #     redis-cli -h  {{ansible_ssh_host}}  -p {{redis_port}} -a {{redis_password}} cluster myid
+    #   register: register_remove_node_id
+    #   vars:
+    #     remove_node_id : "{{register_remove_node_id.stdout}}"
+    #   when: > 
+    #     node_status == "remove" and inventory_hostname in groups['leader'] 
 
-    - name: Check the Node id of transfer node
-      shell : |-
-        redis-cli -h  {{ansible_ssh_host}}  -p {{redis_port}} -a {{redis_password}} cluster myid
-      register: transfer_node_id
-      when: > 
-        node_status == "ready" and inventory_hostname in groups['leader'] 
+    # - name: Check the Node id of transfer node
+    #   shell : |-
+    #     redis-cli -h  {{ansible_ssh_host}}  -p {{redis_port}} -a {{redis_password}} cluster myid
+    #   register: register_transfer_node_id
+    #   vars:
+    #     transfer_node_id : "{{register_transfer_node_id.stdout}}"
+    #   when: > 
+    #     node_status == "ready" and inventory_hostname in groups['leader'] 
 
-    # - name: Ensure the nodes need to removed are present in temporary file
-    #   local_action:
-    #     module: copy
-    #     content: "{{ command_result.stdout_lines | select('search', ansible_ssh_host + ':' + redis_port|string) }}"
-    #     dest: /tmp/node-removal
-    #   when: >
-    #     node_status == 'remove'
+    - name: Ensure the nodes need to removed are present in temporary file
+      local_action:
+        module: copy
+        content: "{{ command_result.stdout_lines | select('search', ansible_ssh_host + ':' + redis_port|string) }}"
+        dest: /tmp/node-removal
+      when: >
+        node_status == 'remove'
+
+    - name: Ensure the nodes need to transfer are present in temporary file
+      local_action:
+        module: copy
+        content: "{{ command_result.stdout_lines | select('search', ansible_ssh_host + ':' + redis_port|string) }}"
+        dest: /tmp/node-ready
+      when: >
+        node_status == 'ready'   
 
     - name: Create the Json file with the remove and ready redis node 
       ansible.builtin.template:
@@ -53,8 +77,8 @@
     - name:  Reshard the Node to be removed 
       command : |-
         {{ redis_command }} --cluster reshard {{ansible_ssh_host}}:{{redis_port}} 
-        --cluster-from {{item.removenode}} 
-        --cluster-to {{ item.presentnode }} 
+        --cluster-from {{ item.removenode[0].split(' ')[0] }} 
+        --cluster-to {{ item.presentnode[0].split(' ')[0] }} 
         --cluster-slots  {{ redis_slots }}
         --cluster-yes
       when: >
@@ -65,7 +89,7 @@
     - name: Ensuring the removed marked nodes are not part of the cluster
       command: |-
         {{ redis_command }} --cluster del-node
-        {{ ansible_ssh_host }}:{{ leader_redis_port }} {{ item.removenode}}
+        {{ ansible_ssh_host }}:{{ leader_redis_port }} {{ item.removenode[0].split(' ')[0] }}
       with_items:
         - "{{ lookup('file', '/tmp/node.json') | from_json }}"
       when: >
@@ -81,4 +105,16 @@
       local_action:
         module: file
         path: /tmp/node.json
+        state: absent
+
+    - name: Ensuring the temporary file is removed after execution
+      local_action:
+        module: file
+        path: /tmp/node-removal
+        state: absent
+
+    - name: Ensuring the temporary file is removed after execution
+      local_action:
+        module: file
+        path: /tmp/node-ready
         state: absent
