--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -4,7 +4,7 @@
     redis_password: Opstree@1234
     leader_redis_port: 6379
     follower_redis_port: 6380
-    redis_slots: 3446
+    redis_slots: 4096
 
   tasks:
     - name: Ensuring the temporary file is created before execution
@@ -58,7 +58,7 @@
         content: "{{ command_result.stdout_lines | select('search', ansible_ssh_host + ':' + redis_port|string) }}"
         dest: /tmp/node-removal
       when: >
-        node_status == 'remove'
+        node_status == 'remove' and inventory_hostname in groups['leader']  
 
     - name: Ensure the nodes need to transfer are present in temporary file
       local_action:
@@ -66,7 +66,7 @@
         content: "{{ command_result.stdout_lines | select('search', ansible_ssh_host + ':' + redis_port|string) }}"
         dest: /tmp/node-ready
       when: >
-        node_status == 'ready'   
+        node_status == 'ready' and inventory_hostname in groups['leader'] 
 
     - name: Create the Json file with the remove and ready redis node 
       ansible.builtin.template:
@@ -86,6 +86,13 @@
       with_items: 
         - "{{ lookup('file', '/tmp/node.json') | from_json }}"
 
+    - name: Rebalance the Redis cluster
+      command: |- 
+        redis-cli -h  {{ansible_ssh_host}}  -p {{redis_port}} -a {{redis_password}}  
+        --cluster rebalance {{ansible_ssh_host}}:{{redis_port}}
+      when: >-
+        node_status == "ready" and inventory_hostname in groups['leader']
+
     - name: Ensuring the removed marked nodes are not part of the cluster
       command: |-
         {{ redis_command }} --cluster del-node
@@ -96,11 +103,6 @@
         inventory_hostname in groups['leader'][0] and
         lookup('file', '/tmp/node.json')|length > 0
         
-    - name: Rebalance the Redis cluster
-      command: |- 
-        redis-cli -h  {{ansible_ssh_host}}  -p {{redis_port}} -a {{redis_password}}  --cluster rebalance {{ansible_ssh_host}}:{{redis_port}}
-      when: node_status == "ready" and inventory_hostname in groups['leader']
-
     - name: Ensuring the temporary file is removed after execution
       local_action:
         module: file
